force-app/main/default/objects/WC_Dealer_Claim_Metric__c/WC_Dealer_Claim_Metric__c.object-meta.xml
<CustomObject>
    <description>Automated snapshot of per-dealer claim KPIs (rolling windows, rates, average amounts). Populated by WC_DealerMetricsBatch for Slack and Data Cloud CRM ingestion.</description>
    <label>WC Dealer Claim Metric</label>
    <nameField>
        <displayFormat>DCM-{00000000}</displayFormat>
        <label>Metric Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WC Dealer Claim Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>