force-app/main/default/objects/WC_Dealer_Claim_Metric__c/fields/WC_Dealer_Account__c.field-meta.xml
<CustomField>
    <fullName>WC_Dealer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Dealer (Account) for this metric row.</description>
    <label>Dealer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>WC Dealer Claim Metrics</relationshipLabel>
    <relationshipName>WC_Dealer_Claim_Metrics</relationshipName>
    <type>Lookup</type>
</CustomField>