force-app/main/default/objects/WC_Dealer_Claim_Metric__c/fields/WC_Last_Run__c.field-meta.xml
<CustomField>
    <fullName>WC_Last_Run__c</fullName>
    <description>When the metrics batch last updated this row.</description>
    <label>WC Last Run</label>
    <type>DateTime</type>
</CustomField>