force-app/main/default/objects/WC_Dealer_Claim_Metric__c/fields/WC_Upsert_Key__c.field-meta.xml
<CustomField>
    <fullName>WC_Upsert_Key__c</fullName>
    <description>Stable key = Dealer Account Id (18-char) for upsert.</description>
    <externalId>true</externalId>
    <label>WC Upsert Key</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>